--- a/worker/dockerfile
+++ b/worker/dockerfile
@@ -2,8 +2,8 @@ FROM python:3.13
 
 RUN python -m pip install atlasopenmagic numpy uproot awkward vector requests pika aiohttp
 
-RUN python -c "import atlasopenmagic as atom;atom.set_release('2025e-13tev-beta'); from atlasopenmagic import install_from_environment; install_from_environment()"
+RUN python -c "import atlasopenmagic as atom; from atlasopenmagic import install_from_environment; install_from_environment()"
 
 COPY . .
 
-CMD [ "python", "./Analysis.py"]
+CMD [ "python","-u", "./Analysis.py"]
