--- a/combiner/dockerfile
+++ b/combiner/dockerfile
@@ -4,4 +4,4 @@ RUN python -m pip install atlasopenmagic numpy matplotlib awkward pika
 
 COPY . .
 
-CMD [ "python","-u", "./Main.py"]
+CMD [ "python","-u", "./Combiner.py"]
